--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "author": "Giving Stage Team",
-  "name": "cine.io",
+  "author": "cine.io Team",
+  "name": "cine-io-example-application",
   "domains": [
     "cine.io"
   ],
   "version": "0.0.1",
-  "description": "cine.io addon test site",
-  "scripts": {
-  },
-  "repository": "git@heroku.com:cine-addon-test.git",
+  "description": "An example application of cine.io written in Node.js.",
+  "scripts": {},
+  "repository": "https://github.com/cine-io/node-example-app",
   "dependencies": {
+    "cine-io": "0.0.1",
     "express": "3.4.8",
+    "jade": "^1.3.1"
   },
-  "devDependencies": {
-  },
-  "license": "Copyrighted / All Rights Reserved",
+  "devDependencies": {},
+  "license": "MIT",
   "engines": {
     "node": "0.10.x"
   },
