--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {},
   "repository": "https://github.com/cine-io/node-example-app",
   "dependencies": {
-    "cine-io": "0.0.2",
+    "cine-io": "^0.1.0",
     "express": "3.4.8",
     "jade": "^1.3.1"
   },
