--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "scripts": {},
   "repository": "https://github.com/cine-io/node-example-app",
   "dependencies": {
-    "cine-io": "^0.1.3",
+    "cine-io": "0.1.3",
     "express": "3.4.8",
-    "jade": "^1.3.1"
+    "jade": "1.3.1"
   },
   "devDependencies": {},
   "license": "MIT",
